Closed
Bug 722046
Opened 14 years ago
Closed 14 years ago
remove extra semicolon after NS_DECl_EVENT_HANDLER
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla12
People
(Reporter: gaston, Assigned: gaston)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
|
4.21 KB,
patch
|
Ms2ger
:
review+
|
Details | Diff | Splinter Review |
Followup to bug #718132, (and similar to #704729) m-c fails now on OpenBSD/gcc 4.2.1 with a bunch of :
In file included from ../../dist/include/mozilla/dom/indexedDB/IndexedDatabaseManager.h:45,
from ../../dist/include/mozilla/dom/indexedDB/FileInfo.h:46,
from ../../dist/include/nsDOMFile.h:56,
from /home/landry/src/mozilla-central/layout/forms/../../content/html/content/src/nsHTMLInputElement.h:51,
from /home/landry/src/mozilla-central/layout/forms/nsFileControlFrame.cpp:67:
../../dist/include/mozilla/dom/indexedDB/IDBDatabase.h:158: error: extra ';'
../../dist/include/mozilla/dom/indexedDB/IDBDatabase.h:159: error: extra ';'
../../dist/include/mozilla/dom/indexedDB/IDBDatabase.h:160: error: extra ';'
In file included from ../../dist/include/mozilla/dom/indexedDB/IndexedDatabaseManager.h:46,
from ../../dist/include/mozilla/dom/indexedDB/FileInfo.h:46,
from ../../dist/include/nsDOMFile.h:56,
from /home/landry/src/mozilla-central/layout/forms/../../content/html/content/src/nsHTMLInputElement.h:51,
from /home/landry/src/mozilla-central/layout/forms/nsFileControlFrame.cpp:67:
../../dist/include/mozilla/dom/indexedDB/IDBRequest.h:161: error: extra ';'
../../dist/include/mozilla/dom/indexedDB/IDBRequest.h:162: error: extra ';'
Patch incoming..
| Assignee | ||
Updated•14 years ago
|
Depends on: 718132
Summary: remove extra ; after NS_DECl_EVENT_HANDLER → remove extra semicolon after NS_DECl_EVENT_HANDLER
| Assignee | ||
Comment 1•14 years ago
|
||
Assignee: nobody → landry
Attachment #592396 -
Flags: review?(bent.mozilla)
| Assignee | ||
Comment 2•14 years ago
|
||
And it seems it's very similar to bug #720815 which resolution only fixed one of three occurences..
Comment 3•14 years ago
|
||
Comment on attachment 592396 [details] [diff] [review]
Remove extra semicolons
r=me if you also fix the others at <http://mxr.mozilla.org/mozilla-central/ident?i=NS_DECL_EVENT_HANDLER>
Attachment #592396 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 4•14 years ago
|
||
Sure, here you are. Wonder why IDBTransaction.h didn't error out first (i can understand for dom/telephony)
Attachment #592396 -
Attachment is obsolete: true
Attachment #592401 -
Flags: review?(Ms2ger)
Comment 5•14 years ago
|
||
Comment on attachment 592401 [details] [diff] [review]
Remove extra semicolons
Thanks. (Don't forget to update your commit message.)
Attachment #592401 -
Flags: review?(Ms2ger) → review+
| Assignee | ||
Comment 6•14 years ago
|
||
I can't edit the commit message without reposting a new patch & reasking for review, and i didn't hit the other occurences.. so, to whoever commits the diff, please remove the extra error lines and only keep the summary line. (is it the right way to do it ?)
Keywords: checkin-needed
Comment 7•14 years ago
|
||
Pushed:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d9a514effc2a
Also, for future reference:
(In reply to Landry Breuil from comment #6)
> I can't edit the commit message without reposting a new patch & reasking for
> review
Don't worry about reasking for review in that case -- if someone grants you r+ with a few changes requested, general practice is to re-post without needing to ask for review on the new patch. (Just be sure not to obsolete the old patch, so that whoever pushes the patch will see that an earlier version has gotten r+ & can easily compare the two versions)
(No need to do that here, though, as I've already pushed the patch w/ updated commit message)
> please remove the extra error lines and only keep the summary line.
> (is it the right way to do it ?)
Yup -- single-line commit messages are the standard practice for mozilla repositories.
(like "Bug XXX: change foo to bar. r=whoever")
Comment 8•14 years ago
|
||
(adding "buildwarning" keyword since this caused build warnings on Linux GCC 4.6)
Blocks: buildwarning
Comment 9•14 years ago
|
||
(er s/keyword/bug-dependency/. Finished with bugspam now, sorry. :))
Updated•14 years ago
|
Keywords: checkin-needed
Comment 10•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•