Bug 722046: Fix build failure on OpenBSD/Gcc 4.2.1 due to extra semicolon. r=Ms2ger